objects/ssot__ChangeRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BusinessJustificationText__c</fullName>
        <label>Business Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestNumber__c</fullName>
        <label>Change Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequest_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequest_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ChangeRequest_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>ChangeRequest_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequest_ReviewerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequest_ReviewerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ChangeRequest_ReviewerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>ChangeRequest_ReviewerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedEndTime__c</fullName>
        <label>Estimated End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedStartTime__c</fullName>
        <label>Estimated Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FinalReviewDateTime__c</fullName>
        <label>Final Review Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FinalReviewNotesText__c</fullName>
        <label>Final Review Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Change Request Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RemediationPlanText__c</fullName>
        <label>Remediation Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewerId__c</fullName>
        <label>Reviewer By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RiskImpactAnalysisText__c</fullName>
        <label>Risk Impact Analysis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectText__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009468139_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequest_OwnerId_map_UserGroup__rel</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>ChangeRequest_OwnerId_map_UserGroup__rel</relationshipLabel>
        <relationshipName>rel_1702009468139_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>